Fix progress bar to display corrent amount
- Fix broken css
- Increase banner height as CTRL banner has too much text in the last slide

Ticket: https://phabricator.wikimedia.org/T405916

--- a/banners/mobile_english/WMDE_FR_2025_Mobile_EN_01/styles/MiniBanner.scss
+++ b/banners/mobile_english/WMDE_FR_2025_Mobile_EN_01/styles/MiniBanner.scss
@@ -2,7 +2,7 @@
 @use '@src/themes/Yperala/variables/breakpoints';
 @use '@src/themes/Treedip/variables/fonts';
 
-$height-small: 328px !default;
+$height-small: 338px !default;
 $height-large: 288px !default;
 
 .wmde-banner {
@@ -26,6 +26,8 @@ $height-large: 288px !default;
 			box-shadow: var( --mini-box-shadow );
 			border-radius: 15px;
 			width: 98%;
+			display: flex;
+			flex-direction: column;
 		}
 
 		&-close {
@@ -50,7 +52,7 @@ $height-large: 288px !default;
 			}
 		}
 
-		&-banner-slideshow {
+		&-slideshow {
 			width: 100%;
 			flex: 1 0 auto;
 		}
